worked on mobile design. Fixed display of messages in the chat

--- a/pomo6/static/css/nav.css
+++ b/pomo6/static/css/nav.css
@@ -44,14 +44,25 @@
     margin-left: 0;
 }
 
-.log_in_buttons{
+.hamburger {
+    display: none;
+    font-size: 28px;
+    cursor: pointer;
+    color: #00BD9D;
+}
+
+.menu{
     display: flex;
     gap: 0.5rem;
     margin: 1rem;
     flex-wrap: wrap;
 }
 
-.log_in_buttons button{
+.mobile-menu {
+    display: none;
+}
+
+.menu button{
     font-size: 1rem;
     cursor: pointer;
     padding: 0.5rem 2rem;
@@ -98,4 +109,35 @@
 #menu-toggle {
     display: block;
     cursor: pointer;
+}
+
+@media (max-width: 768px) {
+    .mobile-hidden {
+        display: none;
+    }
+    .branding {
+        margin: auto;
+    }
+    .hamburger {
+        display: block;
+        position: absolute;
+        top: 10px;
+        right: 15px;
+    }
+    .mobile-menu{
+        display: none;
+    }
+    .mobile-menu.mobile-visible{
+        display: flex;
+        flex-direction: column;
+        background: white;
+        position: absolute;
+        right: 10px;
+        top: 60px;
+        padding: 10px;
+        box-shadow: 0 0 10px rgba(0,0,0,0.2);
+        z-index: 10;
+        gap: 15px;
+        font-size: 1.3rem;
+    }
 }
